--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "file-saver": "https://esm.sh/file-saver@2.0.5",
-    "docx": "https://esm.sh/docx@8.5.0"
+    "docx": "https://esm.sh/docx@8.5.0",
+    "mammoth": "https://esm.sh/mammoth@1.6.0"
   }
 }
 </script>
