--- a/index.html
+++ b/index.html
@@ -68,22 +68,9 @@
         box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04), 0 0 0 1px rgba(0,0,0,0.05);
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "file-saver": "https://esm.sh/file-saver@2.0.5",
-    "docx": "https://esm.sh/docx@8.5.0",
-    "mammoth": "https://esm.sh/mammoth@1.6.0"
-  }
-}
-</script>
 </head>
   <body class="bg-gray-950 text-gray-100 min-h-screen font-sans antialiased overflow-hidden">
     <div id="root" class="h-full"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
